@@ -1,18 +1,18 @@
-8cff9ddb3dd13c64c48db65518b0765a *ChangeLog
-cd5aca461792e96994b95abb9700d33b *DESCRIPTION
-39ecb1a489addb6d296172b6e51ca1be *NAMESPACE
-c4d5b7bbb5d3983cca5e56e6205fb59a *R/dataQuality.R
+c4cdc2fa6fe7093fd0e5e1f56761279f *ChangeLog
+e9527a0ecf59e9ad2c5b3274963a2c98 *DESCRIPTION
+a37ea9c823a4b72437c13769236abada *NAMESPACE
+78b2a21e7013f7d843bfed3281291ca6 *R/dataQuality.R
 e38e174f435b9e6c68b31331d937ac7c *R/densityTree.R
-e95b53f5d8824b046b17d3c68164352e *R/forestDataGen.R
+f183f98d78d83e1d2234e18b2b188e89 *R/forestDataGen.R
 cc465730db1714b20f44229cfaa26932 *R/init.R
 78e4c20f34b8bdf2096b9f5109d6dfc9 *R/misc.R
-b4975481b07f7be8a5eca5dcf8ed4354 *R/rbfDataGen.R
+6cb01cff7b92621d38d0d9cf8018b9ed *R/rbfDataGen.R
 c931debee85df5e9fb59d455bd8d01db *R/rndtrees.R
 c1b3888149ddae1179ec480cef7e95ee *man/cleanData.Rd
 9b88ba6f6a1320267fb68853e06b556b *man/dataSimilarity.Rd
 ab9d2f139afd96f0a6a37120a23e5285 *man/dsClustCompare.Rd
-c61e09d6be2f215b78326732081835d8 *man/newdata.Rd
+366b56b25dc7ec80c8bffbd44957a224 *man/newdata.Rd
 9f94ba0daf2ebecb8a65c1cf4adb2847 *man/performanceCompare.Rd
 4c4a82edc979f3c89f389472380b4eb3 *man/rbfDataGen.Rd
-83787a6904502df64704a2c253f0c6ac *man/semiArtificial-package.Rd
+b493d8f7524df50bf1dd64796140c76a *man/semiArtificial-package.Rd
 2d127294b4e1f6d749060b3cf8ef3bdc *man/treeEnsemble.Rd
