@@ -26,7 +26,6 @@ importFrom("graphics", "axis", "legend", "lines", "plot", "points")
 importFrom("methods", "is")
 importFrom("stats", "as.formula", "delete.response", "median","model.frame", "na.pass", "predict", 
            "runif", "sd", "terms","var","ks.test","quantile","ecdf")
-importFrom("utils", "Rprof")
 importFrom("mcclust","vi.dist")
 importFrom("StatMatch","gower.dist") 
    
