@@ -10,13 +10,16 @@
 \usage{
 \method{newdata}{RBFgenerator}(object, size, var=c("estimated","Silverman"), 
                                classProb=NULL, defaultSpread=0.05, ... )
-\method{newdata}{TreeEnsemble}(object, size=1, onlyPath=FALSE, classProb=NULL, predictClass=FALSE, ...) 
-
+\method{newdata}{TreeEnsemble}(object, fillData=NULL, 
+                               size=ifelse(is.null(fillData),1,nrow(fillData)), 
+                               onlyPath=FALSE, classProb=NULL, 
+                               predictClass=FALSE, ...) 
 }
 
 \arguments{
   \item{object}{ An object of class \code{RBFgenerator} or \code{TreeEnsemble} containing a generator structure as returned by \code{\link{rbfDataGen}} or \code{\link{treeEnsemble}}, respectively.  }
-  \item{size}{ A number of instances to generate.}
+  \item{fillData}{ A dataframe with part of the values already specified. All missing values (i.e. NA values) are filled in by the generator.}
+   \item{size}{ A number of instances to generate. By default this is one instance, or in the case of existing fillData this is the number of rows in that dataframe.}
   \item{var}{For the generator of type \code{RBFgenerator} the parameter \code{var} determines the method of kernel width (variance) estimation. Supported options are \code{"estimated"} and \code{"Silverman"}.}
   \item{classProb}{For classification problems, a vector of desired class value probability distribution. Default value \code{classProb=NULL} uses probability distribution of the generator's training instances. }
   \item{defaultSpread}{For the generator of type \code{RBFgenerator} the parameter is a numeric value replacing zero spread in case \code{var="estimated"} is used. The value \code{defaultSpread=NULL} keeps zero spread values.  }
